--- a/Alpha/AlphaMvc/Views/MasterIncome/Create.cshtml
+++ b/Alpha/AlphaMvc/Views/MasterIncome/Create.cshtml
@@ -15,7 +15,8 @@
 
 <link href="@Url.Content("~/Content/Tab/easy-responsive-tabs.css")" rel="stylesheet" type="text/css" />
 <script src="@Url.Content("~/Scripts/Tab/easyResponsiveTabs.js")" type="text/javascript"></script>
-<div id="myModal">
+
+<div id="container">
     @using (Html.BeginForm())
     {
         <form>
@@ -24,28 +25,22 @@
                     @Html.LabelFor(a => a.Detail)
                     @Html.TextBoxFor(a => a.Detail, new { id = "Detail" })
                     @Html.ValidationMessageFor(a => a.Detail)
-                </li>
-
-                <br />
+                </li>              
             </ul>
-            @* ------------------------------------------- tabbar ------------------------------------- *@
-            @* ---------------------------------------------------------------------------------------------------------- *@
+            <br />
 
             <ul class="form-style">
                 <li>
-                    <input type="submit" value="Save" id="Create" />
+                    <input type="submit" value="Save" id="Save" />
                 </li>
             </ul>
-
-            @* ------------------------------------------- tabbar ------------------------------------- *@
         </form>
-
     }
 </div>
 <script type="text/javascript">
     $(document).ready(function () {
 
-        $("#Create").click(function () {
+        $("#Save").click(function () {
             var dataObject = { Detail: $("#Detail").val() };
             console.log(dataObject);
             $.ajax(
@@ -69,15 +64,4 @@
             });
         });
     });
-
 </script>
-@{
-
-            if (ViewData["result"] != "" && ViewData["result"] != null)
-            {
-                ViewData["result"] = null;
-        <script type="text/javascript" language="javascript">
-                    alert("Data saved Successfully");
-        </script>
-    }
-}
