--- a/Alpha/AlphaMvc/Views/MasterExpense/Index.cshtml
+++ b/Alpha/AlphaMvc/Views/MasterExpense/Index.cshtml
@@ -126,7 +126,7 @@
                         html += '<td>' + data.Table[i].ID + '</td>';
                         html += '<td>' + data.Table[i].Detail + '</td>';
                         html += '<td>';
-                        html += '<a href="#" id="edit'+data.Table[i].ID+ '">'+ '<img src="@Url.Content("~/Images/edit.png")"/></a>';
+                        html += '<a href="/MasterExpense/Edit" id="edit' + data.Table[i].ID + '" onclick="EditRow('+data.Table[i].ID+'')">' + '<img src="@Url.Content("~/Images/edit.png")"/></a>';
                         html += '<a href="#" id="del' + data.Table[i].ID + '">' + '<img src="@Url.Content("~/Images/delete.png")" /></a>';
                         html += '</tr>';
                     }
@@ -140,11 +140,31 @@
                 }
             });
 
+        function Dele() {
+            var param = $("#<%= TextBox1.ClientID %>").val();
+            $("#tbDetails").append("<img src='Images/loading.gif'/>");
+            $.ajax({
+                type: "POST",/*method type*/
+                contentType: "application/json; charset=utf-8",
+                url: "Default.aspx/BindDatatable",/*Target function that will be return result*/
+                data: '{"data":"' + param + '"}',/*parameter pass data is parameter name param is value */
+                dataType: "json",
+                success: function(data) {
+                    alert("Success");
+                }
+            },
+                error: function(result) {
+                    alert("Error");
+                }
+        });   
+    }
+
+
             $("#Del").click(function () {
                 var dataObject = { ID: 1 };
                 $.ajax(
                 {
-                    url: 'http://localhost:13131/api/MasterExpense/Delete',
+                    url: 'http://localhost:13131/api/ExpenseMaster/Delete',
                     type: 'DELETE',
                     data: dataObject,
                     datatype: 'json',
