--- a/Alpha/AlphaMvc/Views/MasterExpense/Create.cshtml
+++ b/Alpha/AlphaMvc/Views/MasterExpense/Create.cshtml
@@ -48,7 +48,7 @@
 
                 success: function (data) {
                     alert('Created Successfully');
-                    window.location.href = "../Index";
+                    window.location.href = "../MasterExpense/Index";
                 },
                 error: function (msg) { alert(msg); }
             });
