--- a/Alpha/AlphaMvc/Views/IncomeMaster/Index.cshtml
+++ b/Alpha/AlphaMvc/Views/IncomeMaster/Index.cshtml
@@ -8,7 +8,7 @@
     <tr>
         <td>
             <div class="topictd">List</div>
-            <a href="/MasterIncome/Create"><img src="@Url.Content("~/images/btnAdd.png")" alt="IMAGES" /></a>
+            <a href="/IncomeMaster/Create"><img src="@Url.Content("~/images/btnAdd.png")" alt="IMAGES" /></a>
         </td>
     </tr>
 </table>
@@ -120,8 +120,8 @@
                         html += '<td>' + data.Table[i].ID + '</td>';
                         html += '<td>' + data.Table[i].Detail + '</td>';
                         html += '<td>';
-                        html += '<a href="#" id="edit' + data.Table[i].ID + '">' + '<img src="@Url.Content("~/Images/edit.png")"/></a>';
-                        html += '<a href="#" id="del' + data.Table[i].ID + '">' + '<img src="@Url.Content("~/Images/delete.png")" /></a>';
+                        html += '<a href="/MasterIncome/Edit?id=' + data.Table[i].ID + '" id="edit' + data.Table[i].ID + '">' + '<img src="@Url.Content("~/Images/edit.png")"/></a>';
+                        html += '<a href="#" id="del' + data.Table[i].ID + '" onclick = " RowDelete(' + data.Table[i].ID + ') ">' + '<img src="@Url.Content("~/Images/delete.png")" /></a>';
                         html += '</tr>';
                     }
                     html += '</tbody>';
@@ -134,4 +134,25 @@
             });
 
         });
+    function RowDelete(id) {
+        var dataObject = { ID: id };
+        $.ajax(
+            {
+                url: 'http://localhost:13131/api/IncomeMaster/Delete',
+                type: 'DELETE',
+                data: dataObject,
+                datatype: 'json',
+
+                success: function (result) {
+                    alert('Delete is completed')
+                    window.location.href = "../IncomeMaster/Index";
+                }
+                ,
+                error: function (msg) {
+                    alert(msg)
+                }
+
+
+            }); alert(id);
+    }
 </script>
