--- a/Alpha/AlphaMvc/Views/ExpenseMaster/Index.cshtml
+++ b/Alpha/AlphaMvc/Views/ExpenseMaster/Index.cshtml
@@ -42,7 +42,7 @@
     <tr>
         <td>
             <div class="topictd">List</div>
-            <a href="/MasterExpense/Create"><img src="@Url.Content("~/images/btnAdd.png")" alt="IMAGES" /></a>
+            <a href="/ExpenseMaster/Create"><img src="@Url.Content("~/images/btnAdd.png")" alt="IMAGES" /></a>
         </td>
     </tr>
 </table>
@@ -120,7 +120,7 @@
                         html += '<td>' + data.Table[i].ID + '</td>';
                         html += '<td>' + data.Table[i].Detail + '</td>';
                         html += '<td>';
-                        html += '<a href="/MasterExpense/Edit?id='+ data.Table[i].ID +'" id="edit' + data.Table[i].ID + '">' + '<img src="@Url.Content("~/Images/edit.png")"/></a>';
+                        html += '<a href="/ExpenseMaster/Edit?id='+ data.Table[i].ID +'" id="edit' + data.Table[i].ID + '">' + '<img src="@Url.Content("~/Images/edit.png")"/></a>';
                         html += '<a href="#" id="del' + data.Table[i].ID + '" onclick = " RowDelete(' + data.Table[i].ID + ') " >' + '<img src="@Url.Content("~/Images/delete.png")" /></a>';
                         html += '</tr>';
                     }
@@ -144,7 +144,7 @@
 
                     success: function (result) {
                         alert('Delete is completed')
-                        window.location.href = "../MasterExpense/Index";
+                        window.location.href = "../ExpenseMaster/Index";
                     }
                     ,
                     error: function (msg) {
