--- a/Alpha/AlphaMvc/Views/IncomeMaster/Index.cshtml
+++ b/Alpha/AlphaMvc/Views/IncomeMaster/Index.cshtml
@@ -8,7 +8,7 @@
     <tr>
         <td>
             <div class="topictd">List</div>
-            <a href="/MasterIncome/Create"><img src="@Url.Content("~/images/btnAdd.png")" alt="IMAGES" /></a>
+            <a href="/IncomeMaster/Create"><img src="@Url.Content("~/images/btnAdd.png")" alt="IMAGES" /></a>
         </td>
     </tr>
 </table>
