--- a/Alpha/AlphaMvc/Views/Shared/_Layout.cshtml
+++ b/Alpha/AlphaMvc/Views/Shared/_Layout.cshtml
@@ -72,7 +72,7 @@
                                 <div class="menutext">
                                     @Html.ActionLink("Master", "", "Home")
                                     <ul class="hidden">
-                                        <li class="menuli"><div class="submenua">@Html.ActionLink("Income", "Index", "MasterIncome")</div></li>
+                                        <li class="menuli"><div class="submenua">@Html.ActionLink("Income", "Index", "IncomeMaster")</div></li>
                                         <li class="menuli"><div class="submenua">@Html.ActionLink("Expense", "Index", "MasterExpense")</div></li>
                                     </ul>
                                 </div>
