--- a/Alpha/AlphaMvc/Content/hidegrid.css
+++ b/Alpha/AlphaMvc/Content/hidegrid.css
@@ -2,9 +2,17 @@
 {
     display: grid;
 }
+ .hidecolumn
+ {
+     display: none;
+ }
  @media screen and (max-width:680px) {
       .hideANDseek
-    {
-        display: none;
-    }
+     {
+         display : none;
+     }
+      .hidecolumn
+     {
+         display: none;
+     }
 }
