--- a/Alpha/AlphaMvc/Views/Shared/_Layout.cshtml
+++ b/Alpha/AlphaMvc/Views/Shared/_Layout.cshtml
@@ -92,7 +92,7 @@
                         </li>
                         <li class="menuli"><div class="menua"><div class="menutext">@Html.ActionLink("Technician", "Index", "Employee")</div></div></li>
                         <li class="menuli"><div class="menua"><div class="menutext">@Html.ActionLink("Products", "Index", "Products")</div></div></li>
-                        <li class="menuli"><div class="menua"><div class="menutext">@Html.ActionLink("Break Down Cost", "Index", "BreakDownCost")</div></div></li>
+                        <li class="menuli"><div class="menua"><div class="menutext">@Html.ActionLink("Break Down Cost", "Index", "BDC")</div></div></li>
                         <li class="menuli"><div class="menua"><div class="menutext">@Html.ActionLink("Job Order", "Index", "JobOrder")</div></div></li>
                         @*<li class="menuli"><div class="menua"><div class="menutext">@Html.ActionLink("Test", "View1", "ExpenseMaster")</div></div></li>*@
                         <li class="menuli">
